--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
+    "isomorphic-dompurify": "^2.26.0",
     "marked": "^16.1.2",
     "next": "15.4.5",
     "react": "19.1.0",
@@ -18,6 +19,7 @@
     "react-highlight": "^0.15.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.2",
     "rehype-pretty-code": "^0.14.1",
     "remark": "^15.0.1",
